include/dss_capi.h

    /*
    Array of strings containing names of all ISOURCE elements.
    */
    DSS_CAPI_DLL void ISources_Get_AllNames(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as ISources_Get_AllNames but using the global buffer interface for results
    */
    DSS_CAPI_DLL void ISources_Get_AllNames_GR(void);
    /*
    Count: Number of ISOURCE elements.
    */
    DSS_CAPI_DLL int32_t ISources_Get_Count(void);
    /*
    Set the First ISOURCE to be active; returns Zero if none.
    */
    DSS_CAPI_DLL int32_t ISources_Get_First(void);
    /*
    Sets the next ISOURCE element to be the active one. Returns Zero if no more.
    */
    DSS_CAPI_DLL int32_t ISources_Get_Next(void);
    /*
    Get name of active ISOURCE
    */
    DSS_CAPI_DLL char* ISources_Get_Name(void);
    /*
    Set Active ISOURCE by name
    */
    DSS_CAPI_DLL void ISources_Set_Name(char* Value);
    /*
    Get the magnitude of the ISOURCE in amps
    */
    DSS_CAPI_DLL double ISources_Get_Amps(void);
    /*
    Set the magnitude of the ISOURCE, amps
    */
    DSS_CAPI_DLL void ISources_Set_Amps(double Value);
    /*
    Phase angle for ISOURCE, degrees
    */
    DSS_CAPI_DLL double ISources_Get_AngleDeg(void);
    /*
    The present frequency of the ISOURCE, Hz
    */
    DSS_CAPI_DLL double ISources_Get_Frequency(void);
    /*
    Phase angle for ISOURCE, degrees
    */
    DSS_CAPI_DLL void ISources_Set_AngleDeg(double Value);
    /*
    Set the present frequency for the ISOURCE
    */
    DSS_CAPI_DLL void ISources_Set_Frequency(double Value);
    DSS_CAPI_DLL int32_t ISources_Get_idx(void);
    DSS_CAPI_DLL void ISources_Set_idx(int32_t Value);